name:                yerdogen
version:             0.1.0.0
synopsis:            Random string generator for yerdo
description:         Please see README.md
homepage:            https://github.com/korayal/yerdogen#readme
license:             BSD3
license-file:        LICENSE
author:              Koray Al
maintainer:          admin@koray.al
copyright:           2016 Koray Al
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable yerdogen
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , random
                     , QuickCheck
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/korayal/yerdogen
